# Smartchatai

./: .gitignore  .replit  Cargo.toml  README.md  asset-manifest.json  index.html  package-lock.json  package.json
.github/workflows/: main.yml
plans/: deployment_plan.md  project_plan.md
public/: index.html
src/: index.js  main.rs
src/client/: App.js  ChatInterface.js  styles.css
src/server/: server.js
static/css/: main.8c26678f.css  main.8c26678f.css.map
static/js/: main.52ed05f2.js  main.52ed05f2.js.map
