[package]
name = "smartchatai"
version = "0.2.0"
edition = "2021"
description = "Smartchatai as a native terminal executable"

[[bin]]
name = "smartchatai"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"
name = "smartchatai-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
